--- a/homepage/layouts/main.hbs
+++ b/homepage/layouts/main.hbs
@@ -6,7 +6,14 @@
     <title>{{ title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#1c1c1c">
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-database.js"></script>
+    {{!-- <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-firestore.js"></script> --}}
+
     <link rel="stylesheet" type="text/css" media="screen" href="../static/css/Global.css" />
+    <script src="../static/js/secu.js"></script>
 </head>
 <body>
     {{{ body }}}
