--- a/homepage/layouts/main.hbs
+++ b/homepage/layouts/main.hbs
@@ -14,6 +14,27 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="../static/css/Global.css" />
     <script src="../static/js/secu.js"></script>
+    <script src="./static/js/database.js"></script>
+    <script src="./static/js/config.js"></script>
+
+    <script>
+        (()=>{
+            validateToken()
+                .then((r)=>{
+                    if (r==='CSR_TOKEN_VALID') {
+                        generateSecurityFluff(4);
+                        console.log('SR Tokens Verified');
+                    }
+                }).catch((e)=>{
+                    if (e==='CSR_TOKEN_INVALID') {
+                        alert(`Security Check Failed!
+                        You might be browsing a malicious site or might have clicked on a malicious link. 
+                        We recommend you go back or close this window!`);
+                        window.location = '/';
+                    }
+                });
+        })()
+    </script>
 </head>
 <body>
     {{{ body }}}
